--- a/style.css
+++ b/style.css
@@ -1,143 +1,146 @@
-*{
-    font-family: 'overpass', sans-serif;
+* {
+	font-family: 'overpass', sans-serif;
 }
 
-body{
-    background: hsl(216, 12%, 8%);
-    color: white;
-    height: 630px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+	background: hsl(216, 12%, 8%);
+	color: white;
+	height: 630px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-h1{
-    font-size: 22px;
+h1 {
+	font-size: 22px;
 }
 
-p{
-    font-size: 15px;
-    text-align: center;
-    margin-top: 0;
+p {
+	font-size: 15px;
+	text-align: center;
+	margin-top: 0;
 }
 
-#ratingState{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background: hsl(213, 19%, 18%);
-    width: 300px;
-    height: 300px;
-    padding: 30px;
-    border-radius: 20px;
+#ratingState {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	background: hsl(213, 19%, 18%);
+	width: 300px;
+	height: 300px;
+	padding: 30px;
+	border-radius: 20px;
 }
 
-.container{
-display: block;
-position: relative;
+.container {
+	display: block;
+	position: relative;
 }
 
 .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-  }
-
-.star{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: hsl(214, 19%, 22%);
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	width: 10px;
+	height: 10px;
 }
 
-.checkmark{
-    position: relative;
-    /* border: 2px solid white; */   
-    background-color: hsl(214, 19%, 22%);
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 50%;
-    cursor: pointer;
+.star {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: hsl(214, 19%, 22%);
+	width: 40px;
+	height: 40px;
+	border-radius: 40px;
 }
 
-.container:hover input ~ .checkmark{
-    background-color: hsl(217, 12%, 63%);
+.checkmark {
+	position: relative;
+	/* border: 2px solid white; */
+	background-color: hsl(214, 19%, 22%);
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.container:hover input ~ .checkmark {
+	background-color: hsl(217, 12%, 63%);
 }
 
 .container input:checked ~ .checkmark {
-    background-color: hsl(25, 97%, 53%);
-    color: white;
+	background-color: hsl(25, 97%, 53%);
+	color: white;
+	padding: 10px 15px;
 }
 
-.rate{
-    display: flex;
-    justify-content: space-around;
-    /* margin: 10px; */
-    /* margin-bottom: 10px; */
+.rate {
+	display: flex;
+	justify-content: space-around;
+	/* margin: 10px; */
+	/* margin-bottom: 10px; */
 }
 
-button{
-    text-decoration: none;
-    text-align: center;
-    line-height: 40px;
-    background: hsl(25, 97%, 53%);
-    color: white;
-    border: 2px solid hsl(25, 97%, 53%);
-    border-radius: 20px;
-    height: 40px;
-    width: 300px;
-    margin: 25px 0 0 0;
-    cursor: pointer;
+button {
+	text-decoration: none;
+	text-align: center;
+	line-height: 40px;
+	background: hsl(25, 97%, 53%);
+	color: white;
+	border: 2px solid hsl(25, 97%, 53%);
+	border-radius: 20px;
+	height: 40px;
+	width: 300px;
+	margin: 25px 0 0 0;
+	cursor: pointer;
 }
 
-button:active{
-    background: white;
-    color: hsl(25, 97%, 53%);
-    border: 2px solid white;
+button:active {
+	background: white;
+	color: hsl(25, 97%, 53%);
+	border: 2px solid white;
 }
 
-#thankUstate{
-    position: absolute;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background: hsl(213, 19%, 18%);
-    width: 300px;
-    height: 300px;
-    padding: 30px;
-    border-radius: 20px;
+#thankUstate {
+	position: absolute;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	background: hsl(213, 19%, 18%);
+	width: 300px;
+	height: 300px;
+	padding: 30px;
+	border-radius: 20px;
 }
 
-#thankUstate img{
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 10px;
+#thankUstate img {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 10px;
 }
 
-#thankUstate h1{
-    text-align: center;
+#thankUstate h1 {
+	text-align: center;
 }
 
-.selection{
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 0;
-    background: hsl(214, 19%, 22%);
-    color: hsl(25, 97%, 53%);
-    width: 160px;
-    padding: 5px;
-    border-radius: 20px;
+.selection {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 0;
+	background: hsl(214, 19%, 22%);
+	color: hsl(25, 97%, 53%);
+	width: 160px;
+	padding: 5px;
+	border-radius: 20px;
 }
 
-svg{
-    margin-top: 10px;
-    margin-bottom: 10px;
+svg {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
